# EComCareLM

./: .gitignore  README.md  _面试准备指南.md  _面试问答.md  _面试问题清单.md  pyproject.toml
data/processed/: bad_eval_report.md  bad_eval_results.jsonl  cleaned.jsonl  dpo_from_badcase.jsonl  dpo_train.jsonl  eval_report.md  eval_results.jsonl  eval_summary.json  pgdm_disagreements.jsonl  pgdm_dpo_train.jsonl  pgdm_hrpvr.json  pgdm_policy_labels.jsonl  pgdm_rule_results.jsonl  predictions.jsonl  sft_train.jsonl
data/raw/: ecommerce_faq_sample.jsonl
data/samples/: bad_predictions_sample.jsonl  eval_set_v1.jsonl  judge_results_sample.jsonl
data/schemas/: dpo.schema.json  eval.schema.json  sft.schema.json
debug/: AI_REVIEW_GUIDE.md  BUG_LEDGER.md
docs/: 公开数据集.md
ecomcarelm/: __init__.py  baseline.py  builders.py  cleaning.py  cli.py  datasets.py  disagreement.py  evaluation.py  io.py  judge.py  policy.py  policy_labeler.py  report.py
interview/: onlyQ.md
openspec/changes/add-pgdm-dpo/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/bootstrap-ecomcarelm/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/upgrade-real-training/: design.md  proposal.md  spec.md  tasks.md
scripts/: generate_ecom_data.py  import_jddc_baseline.py  run_sample_pipeline.ps1  smoke_test.py
tests/: test_pipeline.py
train/: __init__.py  dpo_llamafactory.yaml  rewards.py  sft_llamafactory.yaml  train_dpo.py  train_grpo.py  train_ppo.py  train_sft.py
